<resources>
    <string name="app_name" translatable="false">Fixity</string>
    <string name="password" translatable="false">Password</string>
    <string name="login" translatable="false">Login</string>
    <string name="logo" translatable="false">logo</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="register_now"><u>Register now!</u></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="notes">Notes</string>
    <string name="add_note" translatable="false">add note</string>
    <string name="note_title">Notes</string>
    <string name="titleAddNote">Title</string>
    <string name="enter_note_here">Enter note here</string>
    <string name="empty_fields">The fields couldn\'t be empty!</string>
    <string name="titleActivityAddNote">Add Note</string>
    <string name="edit_note" translatable="false">edit note</string>
    <string name="delete_note" translatable="false">delete note</string>
    <string name="cancel_note" translatable="false">cancel note</string>
    <string name="delete_confirmation">Do you want to delete this note?</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="note_deleted">Note got deleted!</string>
    <string name="success_update_note">Note updated successfully!</string>
    <string name="edit_notes_title">Edit Note</string>
    <string name="success_delete_note">Note deleted successfully!</string>
    <string name="note_details">Note Details</string>
    <string name="note_title_required">Note title required!</string>
    <string name="note_required">Note required!</string>
    <string name="name_required">Name is required!</string>
    <string name="username_required">Username required!</string>
    <string name="not_allow_spaces_username">Username doesn\'t allow spaces!</string>
    <string name="email_required">Email is required!</string>
    <string name="email_invalid">Email is invalid!</string>
    <string name="pwd_invalid">Password must be between 8 and 30 characters!</string>
    <string name="not_allow_spaces_password">Password doesn\'t allow spaces!</string>
    <string name="different_pwd">Passwords doesn\'t match!</string>
    <string name="username_exists">Username already exists!</string>
    <string name="email_exists">Email already exists!</string>
    <string name="success_register">User registered successfully!</string>
    <string name="error_register">ERROR!</string>
    <string name="register_title">Register</string>
    <string name="name">Name</string>
    <string name="email" translatable="false">Email</string>
    <string name="confirm_password">Confirmation password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_in"><u>Sign In</u></string>
    <string name="empty_password">Password can\'t be empty!</string>
    <string name="username_not_exist">Username doesn\'t exist!</string>
    <string name="password_not_exist">Wrong password!</string>
    <string name="remember_me">Remember me</string>
    <string name="pref_file_key" translatable="false">ipvc.estg.fixity.User</string>
    <string name="pref_is_user_login" translatable="false">isUserLogin</string>
    <string name="pref_username" translatable="false">username</string>
    <string name="pref_user_id" translatable="false">id_user</string>
    <string name="reported_problems">Reported Problems</string>
    <string name="account">Account</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="settings">Settings</string>
    <string name="report_problem">Report Problem</string>
    <string name="menuMap">Menu Map</string>
    <string name="uploadPhoto">Upload Photo</string>
    <string name="upload_from_cam">Upload using camera</string>
    <string name="upload_from_gallery">Upload using gallery</string>
    <string name="enter_problem_here">Enter problem here</string>
    <string name="add_problem" translatable="false">add problem</string>
    <string name="cancel_report" translatable="false">cancel report</string>
    <string name="photo_required">Photo is required!</string>
    <string name="problem_required">Problem required!</string>
    <string name="error_uploading">Error uploading!</string>
    <string name="size_error">Image is too large! Max size: 16Mb!</string>
    <string name="error_updating">Error reporting problem or updating URL!</string>
    <string name="edit_problem">Edit Problem</string>
    <string name="remove_problem">Remove problem</string>
    <string name="problem_details">Problem Details</string>
    <string name="problemDeleteError">Error deleting problem!</string>
    <string name="problemNotFound">Problem not found!</string>
    <string name="problemDeleted">Problem deleted successfully!</string>
    <string name="select_category">Select category</string>
    <string name="coordinates">Coordinates</string>
    <string name="category">Category</string>
    <string name="problem">Problem</string>
    <string name="delete_problem_confirmation">Do you want to delete this problem?</string>
    <string name="edit_problem_title">Edit Problem</string>
    <string name="error_updating_data">Error updating data!</string>
    <string name="data_updated_sucess">Data updated successfully!</string>
    <string name="nothing_changed">No value has been changed!</string>
    <string name="filter_problem">Filter Problems</string>
    <string name="radius">Radius</string>
    <string name="disable">Disable Filter</string>
    <string name="geofence_unknown_error" translatable="false">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available" translatable="false">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences" translatable="false">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents" translatable="false">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="geofence_transition_invalid_type" translatable="false">Geofence transition error: invalid transition type %1$d</string>
    <string name="geofence_transition_entered" translatable="false">Entered</string>
    <string name="geofence_transition_exited" translatable="false">Exited</string>
    <string name="unknown_geofence_transition" translatable="false">Unknown Transition</string>
    <string name="geofence_transition_notification_text" translatable="false">Click notification to return to app</string>
</resources>