<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_fixity" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColorHint="@color/myBlack"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeColor="@color/myBlack"
            app:hintTextColor="@color/myBlack"
            app:startIconDrawable="@drawable/ic_outline_person_24"
            app:startIconTint="@color/myBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_bold"
                android:inputType="textPersonName"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:textColorHint="@color/myBlack"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeColor="@color/myBlack"
            app:hintTextColor="@color/myBlack"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/myBlack"
            app:startIconDrawable="@drawable/ic_outline_lock_24"
            app:startIconTint="@color/myBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_bold"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:drawableEnd="@drawable/ic_round_arrow_forward_24"
            android:drawableRight="@drawable/ic_round_arrow_forward_24"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="18sp"
            app:backgroundTint="#f9ac16"
            app:cornerRadius="30dp"
            app:drawableTint="@color/myBlack" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_bold"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/myBlack" />

            <TextView
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/comfortaa_bold"
                android:onClick="registerClick"
                android:text="@string/register_now"
                android:textColor="#0000FF" />
        </LinearLayout>

        <ImageView
            android:id="@+id/btn_notes"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/notes"
            app:srcCompat="@drawable/icon_notes" />

    </LinearLayout>


</LinearLayout>