<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_addProblem"
        android:layout_below="@+id/include"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView
            android:id="@+id/imageUpload"
            android:layout_width="fill_parent"
            android:layout_height="250dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/uploadPhoto"
            android:foregroundGravity="center"
            android:src="@drawable/ic_baseline_photo_camera_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_uploadFromCam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageUpload"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/upload_from_cam"
            android:textColor="#fff"
            android:textSize="18sp"
            app:backgroundTint="#f9ac16"
            app:cornerRadius="30dp"
            app:drawableTint="@color/myBlack" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_uploadFromGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_uploadFromCam"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/upload_from_gallery"
            android:textColor="#fff"
            android:textSize="18sp"
            app:backgroundTint="#f9ac16"
            app:cornerRadius="30dp"
            app:drawableTint="@color/myBlack" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/spinnerProblemType"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_uploadFromGallery"
            android:fontFamily="@font/comfortaa_bold"
            android:hint="@string/select_category"
            android:inputType="textMultiLine"
            android:shadowColor="@color/black"
            android:textColor="@color/black"
            android:textColorHint="@color/myBlack"
            android:textSize="15sp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/myBlack"
            app:hintTextColor="@color/myBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <AutoCompleteTextView
                android:id="@+id/txtCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:clickable="false"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reportProblemText"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinnerProblemType"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/comfortaa_bold"
            android:hint="@string/enter_problem_here"
            android:inputType="textMultiLine"
            android:shadowColor="@color/black"
            android:textColor="@color/black"
            android:textColorHint="@color/myBlack"
            android:textSize="15sp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/myBlack"
            app:hintTextColor="@color/myBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addProblemReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="250dp"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>


    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_addProblem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_problem"
        android:src="@drawable/ic_baseline_save_24"
        app:backgroundTint="#f9ac16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_cancelAddProblem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/cancel_report"
        android:src="@drawable/ic_baseline_cancel_24"
        app:backgroundTint="#f9ac16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</RelativeLayout>