<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardNotes"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="#fff"
    android:padding="20dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:padding="10dp">


        <TextView
            android:id="@+id/note_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/editBtn"
            android:background="@color/white"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_toStartOf="@id/editBtn" />

        <TextView
            android:id="@+id/note_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/note_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_toStartOf="@id/editBtn"
            android:layout_toLeftOf="@id/editBtn"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:text="Date" />

        <TextView
            android:id="@+id/note_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/note_date"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_toStartOf="@id/editBtn"
            android:layout_toLeftOf="@id/editBtn"
            android:background="@color/white"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/editBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_toStartOf="@id/deleteBtn"
            android:layout_toLeftOf="@id/deleteBtn"
            android:contentDescription="@string/edit_note"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_baseline_edit_24" />

        <ImageView
            android:id="@+id/deleteBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/delete_note"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_baseline_delete_forever_24" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
